CIE chromaticities for particular black-body temperatures.

Increased maximum number of input pictures in pcomb and pcompos to 512.

Created rtcontrib program for computing ray contribution coefficients.
This tool may be used to do standard optical ray tracing or daylight
coefficient calculations for annual simulations, among other uses.

Added tilde ('~') output option as part of the -o* specification of
rtrace.  This permits ray trees to be parsed more easily in binary
output mode, as needed by rtcontrib.

Implemented Russian roulette ray termination with -lr <= 0.
Made -lr -10 the default in rtcontrib.

Made rtcontrib -f option search RAYPATH directories.

Made it so -o option of rtcontrib can pipe -o output to a command.

Added -if and -of options to total for binary i/o (following rcalc mold).

Switched default options in rtrace to use Russian roulette.  (Rpict and rvu
still use biased ray termination.)

Added rtcontrib -r option to recover partial output.

Added -u rendering option for pure Monte Carlo sampling.
(Got rid of -DMC compile option, which this makes superfluous.)

Changed -t option of rlam to accept strings as well as single characters.

Fixed bug in rcalc with -l option where it would sometimes go into an
infinite loop.

Fixed truly ancient bug in bounding box computation for cones, which
could (and did) cause missing segments.

Added -z option to normtiff to output LZW-compressed files.

Last change to total causes it to produce results when it sees an empty
line on the input.  This was not intentional, but I decided I like this
behavior so I documented it rather than changing it.

=====================
Version 3.8

Fixed Russian roulette ray termination, which was doing the opposite of
what it should have been doing, resulting in overestimated values below
minimum ray sampling weight (serious).

Changed mksource to use 98th percentile (rather than 99th) for threshold.

(Above changes included in 3.7.1 patch release.)