@@ -362,7 +362,7 @@ initfromtif(void)		/* initialize conversion from TIFF input */
 		quiterr("unknown input image resolution");
 
 	if (!TIFFGetField(cvts.tif, TIFFTAG_STONITS, &cvts.stonits))
-		cvts.stonits = 1.;
+		cvts.stonits = -1.;
 
 	if (!TIFFGetField(cvts.tif, TIFFTAG_DATETIME, &cp))
 		cvts.capdate[0] = '\0';
@@ -380,13 +380,15 @@ initfromtif(void)		/* initialize conversion from TIFF input */
 	if (cvts.pixrat < .99 || cvts.pixrat > 1.01)
 		fputaspect(cvts.pixrat, cvts.rfp);
 	if (CHK(C_XYZE)) {
-		fputexpos(pow(2.,(double)cvts.bradj)/cvts.stonits, cvts.rfp);
+		if (cvts.stonits > .0)
+			fputexpos(pow(2.,(double)cvts.bradj)/cvts.stonits, cvts.rfp);
 		fputformat(CIEFMT, cvts.rfp);
 	} else {
 		if (CHK(C_PRIM))
 			fputprims(cvts.prims, cvts.rfp);
-		fputexpos(WHTEFFICACY*pow(2.,(double)cvts.bradj)/cvts.stonits,
-				cvts.rfp);
+		if (cvts.stonits > .0)
+			fputexpos(WHTEFFICACY*pow(2.,(double)cvts.bradj)/cvts.stonits,
+					cvts.rfp);
 		fputformat(COLRFMT, cvts.rfp);
 	}
 	if (cvts.capdate[0])
